# feature-toggles

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2023-11-25-170706_create_features_table/: down.sql  up.sql
src/: main.rs
src/api/: api_error.rs  feature.rs  mod.rs
src/model/: feature.rs
src/persistence/: feature.rs  mod.rs  persistence.rs  schema.rs
