[package]
name = "feature-toggles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
dotenvy = "0.15"
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
